--- a/colorlab-backend/src/main/resources/application.properties
+++ b/colorlab-backend/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=colorlab
+
+# PostgreSQL config
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+
+# JPA / Hibernate config
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
