--- a/colorlab-backend/src/main/resources/application.properties
+++ b/colorlab-backend/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.boot.autoconfigure.web=DEBUG
+logging.level.org.springframework.http.converter=DEBUG
