--- a/colorlab-frontend/package.json
+++ b/colorlab-frontend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "@uiw/react-color": "^2.7.3",
+    "axios": "^1.12.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3",
