--- a/colorlab-backend/src/main/resources/application.properties
+++ b/colorlab-backend/src/main/resources/application.properties
@@ -1,15 +1,1 @@
-spring.application.name=colorlab
-
-# PostgreSQL config
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-
-# JPA / Hibernate config
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-logging.level.org.springframework.web=DEBUG
-logging.level.org.springframework.boot.autoconfigure.web=DEBUG
-logging.level.org.springframework.http.converter=DEBUG
+spring.profiles.active=local
